--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -88,29 +88,36 @@
         <!------------------------------------------------------------------------------------>
     </div>
 </nav>
-<main class="row">
-    <div class="col col-2">&nbsp;
-
+<main class="container">
+    <div class="row" style="height: 4rem;">
+       &nbsp;
     </div>
-    <div class="col col-8">
-        <form id="createNewUser" class="mt-2">
-            <div class="form-group">
-                <label for="username">User Name</label>
-                <input type="text" class="form-control" id="username" placeholder="Enter User Name..">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter Password..">
-            </div>
-            <div class="form-group">
-                <label for="email">User Name</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter Email..">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-    <div class="col col-2">&nbsp;
+    <div class="row w-100">
+        <div class="col col-2">&nbsp;
 
+        </div>
+        <div class="col col-8">
+            <div class="container col col-8">
+                <form id="createNewUser" class="mt-2">
+                    <div class="form-group">
+                        <label for="username">User Name</label>
+                        <input type="text" class="form-control" id="username" placeholder="Enter User Name..">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Enter Password..">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">User Name</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter Email..">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
+        <div class="col col-2">&nbsp;
+
+        </div>
     </div>
 </main>
 <!--------------------------------------------------------------------------------------->
