--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,7 +63,7 @@
                 Login
             </a>
             <div class="dropdown-menu dropdown-menu-right my-2">
-                <form class="form-inline" method="post" accept-charset="UTF-8">
+                <form class="form-inline" method="post" action="/login" accept-charset="UTF-8">
                     <input class="form-control login col-11 mx-2 my-1" type="text" name="username" placeholder="Username.."><br>
                     <input class="form-control login col-11 mx-2 my-1" type="password" name="password" placeholder="Password.."><br>
                     <input class="btn btn-dark mx-2 my-1" type="submit" name="submit" value="Login">
@@ -78,7 +78,7 @@
                 Logout
             </a>
             <div class="dropdown-menu dropdown-menu-right my-2">
-                <form class="form-inline" method="post" accept-charset="UTF-8">
+                <form class="form-inline" method="post" action="/logout" accept-charset="UTF-8">
                     <input class="btn btn-dark mx-2 my-1 w-100" type="submit" name="Logout" value="Logout">
                 </form>
             </div>
