--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -49,7 +49,7 @@
             </li>
         </ul>
         <!--------------------------------------------Search----------------------------------->
-        <li class="nav-item" style="list-style-type:none;">
+        <li class="nav-item" style="list-style-type:none;" >
             <form class="nav-item form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
@@ -58,7 +58,7 @@
         <!------------------------------------------------------------------------------------>
 
         <!--------------------------------------------Login----------------------------------->
-        <li class="nav-item dropdown my-2 my-lg-0 d-none d-md-block mx-1" style="list-style-type:none; height: 38px;">
+        <li sec:authorize="${isAuthenticated()==false}" class="nav-item dropdown my-2 my-lg-0 d-none d-md-block mx-1" style="list-style-type:none; height: 38px;">
             <a class="nav-link dropdown-toggle btn btn-outline-dark my-2 my-sm-0 text-center" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="height: 37.8px; padding: 0.4rem 1rem;">
                 Login
             </a>
@@ -73,9 +73,9 @@
         </li>
         <!------------------------------------------------------------------------------------>
         <!--------------------------------------------Logout----------------------------------->
-        <li class="nav-item dropdown my-2 my-lg-0 d-none d-md-block mx-1" style="list-style-type:none; height: 38px;">
-            <a class="nav-link dropdown-toggle btn btn-outline-dark my-2 my-sm-0 text-center" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="height: 37.8px; padding: 0.4rem 1rem;">
-                Logout
+        <li sec:authorize="${isAuthenticated()==true}" class="nav-item dropdown my-2 my-lg-0 d-none d-md-block mx-1" style="list-style-type:none; height: 38px;">
+            <a sec:authentication="name" class="nav-link dropdown-toggle btn btn-outline-dark my-2 my-sm-0 text-center" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="height: 37.8px; padding: 0.4rem 1rem;">
+
             </a>
             <div class="dropdown-menu dropdown-menu-right my-2">
                 <form class="form-inline" method="post" action="/logout" accept-charset="UTF-8">
