update show forum post

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,8 @@
 </head>
 <body>
 <nav th:insert="Fragment.html::navbar"></nav>
+<main th:id="mainbody">
+</main>
 <script src="" async defer></script>
 </body>
 </html>
