--- a/src/main/resources/templates/Fragment.html
+++ b/src/main/resources/templates/Fragment.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script th:src="@{/AjaxScript/AjaxMapping.js}"></script>
+    <script th:src="@{/AjaxScript/AjaxMapping.js}" async defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
@@ -35,10 +35,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/forum">Forum <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#" id="forum">Forum <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/post">Create Post <span class="sr-only">(current)</span></a>
+            <li sec:authorize="${isAuthenticated()==true}" class="nav-item active">
+                <a class="nav-link" href="#" id="createPost">Create Post <span class="sr-only">(current)</span></a>
             </li>
 
             <li class="nav-item">
@@ -85,7 +85,7 @@
         <!------------------------------------------------------------------------------------>
         <!--------------------------------------------Logout----------------------------------->
         <li sec:authorize="${isAuthenticated()==true}"  class="nav-item dropdown my-2 my-lg-0 d-none d-md-block mx-1" style="list-style-type:none; height: 38px;">
-            <a sec:authentication="name" sec:authorize="hasRole('ROLE_PREMIUM_USER')" class="nav-link dropdown-toggle btn-warning btn my-2 my-sm-0 text-center" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="height: 37.8px; padding: 0.4rem 1rem;">
+            <a sec:authentication="name" sec:authorize="hasRole('ROLE_PREMIUM_USER')" class="nav-link dropdown-toggle btn btn-warning  my-2 my-sm-0 text-center" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="height: 37.8px; padding: 0.4rem 1rem;">
 
             </a>
             <a sec:authentication="name" sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_MODERATOR','ROLE_USER')" class="nav-link dropdown-toggle btn-primary btn my-2 my-sm-0 text-center" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="height: 37.8px; padding: 0.4rem 1rem;">
@@ -103,27 +103,50 @@
 <!------------------------------------------------------------------------------------------------------------------------------------>
 <main>
     <!------------------------------------------------------------------------------------------------------------------------------------>
-    <div class="container" th:fragment="post">
+    <th:block th:fragment="posts" th:each="post : ${appPosts}">
+    <div class="container" >
         <div class="row">
             <div class="col col-12">
                 <br>
                 <div class="card bg-light text-light border-0" style="padding: 0px;">
-                    <div class="card card-title bg-dark border-dark text-light" style="padding: 1rem; margin-bottom: 0px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px;">post title</div>
+                    <div class="card card-title bg-dark border-dark text-light" style="padding: 1rem; margin-bottom: 0px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px;" th:text="${post.postName}"></div>
                     <div class="card card-body bg-light text-black-50" style="padding: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;">
                         <div class="container">
                             <div class="row">
                                 <div class="col col-12" style="margin: 0px; padding: 0px;">
-                                    <div style="padding: 0.5rem; padding-left: 1rem; font-size:1.25rem;">
-                                        post details
+                                    <div style="padding: 0.5rem; padding-left: 1rem; font-size:1.25rem;" th:text="${post.description}">
                                     </div>
-                                    <div style="padding-left: 1rem; padding-bottom: 0.5rem;">
-                                        posted by
+                                    <div style="padding-left: 1rem; padding-bottom: 0.5rem;" th:text="'Posted by '+ ${post.description}">
+
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    </th:block>
+
+    <!------------------------------------------------------------------------------------------------------------------------------------>
+    <div class="container" th:fragment="createPost">
+
+        <div class="row">
+            <div class="col col-12">
+                <br>
+                <form id="createNewPost">
+                    <div class="form-group">
+                        <label for="postTitle">Post Title</label>
+                        <input type="text" class="form-control" id="postTitle" placeholder="Title..." required>
+                    </div>
+                    <div class="form-group">
+                        <label for="postContent">Content</label>
+                        <textarea class="form-control" id="postContent" rows="5" style="resize:none" required></textarea>
+                    </div>
+                    <input type="submit" class="btn btn-light" value="Submit">
+                </form>
+                <script th:src="@{/AjaxScript/AjaxCreate.js}" async defer></script>
             </div>
         </div>
     </div>
