--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -39,6 +39,6 @@
 <!--------------------------------------------------------------------------------------->
 
 
-<script src="" async defer></script>
+<script th:src="@{/AjaxScript/AjaxMapping.js}" async defer></script>
 </body>
 </html>
