--- a/src/main/resources/templates/account/password.html
+++ b/src/main/resources/templates/account/password.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <script>
+
+        function checkPass(){
+            let newPass = document.getElementById("form_new").value;
+            let newPass_confirm = document.getElementById("form_confirmNew").value;
+            if (newPass == newPass_confirm){
+                document.getElementById("form_newPass").submit();
+            } else {
+                document.getElementById("response").innerHTML = "mật khẩu không trùng khớp!!";
+            }
+        }
+    </script>
 </head>
 <body>
-
+<div id="content">
+    <div id="mainContainer"></div>
+    <div id="leftColumn">
+        <div class="mainBox">
+            <div class="mainBox inputForm updateAccount">
+                <h3>Cap nhat password</h3>
+                <form id="form_newPass" name="form" method="post" action="" class="submitForm">
+                    <p class="required">
+                        <label for="form_new" class="required">mat khau moi</label>
+                        <input type="password" id="form_new" name="newPass" required="required" class="text mediumWidth">
+                    </p>
+                    <p class="required">
+                        <label for="form_confirmNew" class="required">nhap lai mat khau</label>
+                        <input type="password" id="form_confirmNew" name="form[confirmNew]" required="required" class="text mediumWidth">
+                    </p>
+                    <p class="buttonSet">
+                        <button id="submit-bt" onclick="checkPass()"
+                                type="button" class="buttons submitButton" title="Cap Nhap">cap nhap</button>
+                        <a class="buttons cancelButtons" href="/" title="Bỏ qua">Bỏ qua</a>
+                        <span id="response"></span>
+                    </p>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
