--- a/src/main/resources/templates/account/password.html
+++ b/src/main/resources/templates/account/password.html
@@ -14,7 +14,7 @@
             if (newPass == newPass_confirm){
                 document.getElementById("form_newPass").submit();
             } else {
-                document.getElementById("response").innerHTML = "mật khẩu không trùng khớp!!";
+                document.getElementById("response").innerHTML = "khong trung!!";
             }
         }
     </script>
@@ -26,7 +26,7 @@
         <div class="mainBox">
             <div class="mainBox inputForm updateAccount">
                 <h3>Cap nhat password</h3>
-                <form id="form_newPass" name="form" method="post" action="" class="submitForm">
+                <form id="form_newPass" name="form" method="post" action="" class="submitForm" th:object="${user}">
                     <p class="required">
                         <label for="form_new" class="required">mat khau moi</label>
                         <input type="password" id="form_new" name="newPass" required="required" class="text mediumWidth">
@@ -38,7 +38,7 @@
                     <p class="buttonSet">
                         <button id="submit-bt" onclick="checkPass()"
                                 type="button" class="buttons submitButton" title="Cap Nhap">cap nhap</button>
-                        <a class="buttons cancelButtons" href="/" title="Bỏ qua">Bỏ qua</a>
+                        <a class="buttons cancelButtons" href="/" title="Bo qa">bo qua</a>
                         <span id="response"></span>
                     </p>
                 </form>
