cap nhat password

--- a/src/main/resources/templates/account/password.html
+++ b/src/main/resources/templates/account/password.html
@@ -10,8 +10,8 @@
 
         function checkPass(){
             let newPass = document.getElementById("form_new").value;
-            let newPass_confirm = document.getElementById("form_confirmNew").value;
-            if (newPass == newPass_confirm){
+            let pass_confirm = document.getElementById("form_confirmNew").value;
+            if (newPass == pass_confirm){
                 document.getElementById("form_newPass").submit();
             } else {
                 document.getElementById("response").innerHTML = "khong trung!!";
@@ -26,7 +26,7 @@
         <div class="mainBox">
             <div class="mainBox inputForm updateAccount">
                 <h3>Cap nhat password</h3>
-                <form id="form_newPass" name="form" method="post" action="" class="submitForm" th:object="${user}">
+                <form id="form_newPass" name="form" method="post" action="  " class="submitForm" th:object="${user}">
                     <p class="required">
                         <label for="form_new" class="required">mat khau moi</label>
                         <input type="password" id="form_new" name="newPass" required="required" class="text mediumWidth">
