--- a/src/main/resources/templates/account/edit.html
+++ b/src/main/resources/templates/account/edit.html
@@ -3,7 +3,9 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Edit AppUser</title>
+    <title>edit user</title>
+    <link rel="stylesheet" type="text/css" href="https://s-xem.mkocdn.com/bundles/mkoxem/css/xem.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
 <h1>Edit AppUser</h1>
