--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,11 +4,23 @@
 </head>
 <body>
 <nav th:insert="Fragment.html::navbar"></nav>
-<main th:id="mainbody">
-    <th:block th:insert="Fragment.html::posts">
+<main >
+    <div class="container">
+        <div class="row">
+            <div class="col col-12">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+            </div>
+        </div>
+    </div>
+    <div th:id="mainbody">
+        <th:block th:insert="Fragment.html::posts">
 
-    </th:block>
+        </th:block>
+    </div>
 </main>
-<script th:src="@{/AjaxScript/AjaxMapping.js}" async defer></script>
 </body>
 </html>
