update hien thi

--- a/src/main/resources/templates/Fragment.html
+++ b/src/main/resources/templates/Fragment.html
@@ -260,7 +260,7 @@
         </div>
     </th:block>
     <!---------------------------------------------------------Create Comment----------------------------------------------------------->
-    <div class="container" th:fragment="createComment" sec:authorize="${isAuthenticated()==true}">
+    <div class="container my-4" th:fragment="createComment" sec:authorize="${isAuthenticated()==true}">
         <div class="row">
             <div class="col col-12" th:object="${post}">
                 <br>
