--- a/src/main/resources/templates/PostDetails.html
+++ b/src/main/resources/templates/PostDetails.html
@@ -66,22 +66,22 @@
             </div>
             <!---------------------------------------------------Comment------------------------------------------------------>
             <div class="container">
-                <div class="row">
+                <div class="row no-gutters">
                     <th:block th:fragment="posts" th:each="comment : ${comments}">
                         <div class="col col-1 my-1">
-                            <img src="" alt="IMG">
+                            <img class="thumbnail" style="width: 100%; height: 100%;" th:src="${comment.url}" alt="IMG">
                         </div>
                         <div class="col col-11 my-1">
                             <th:block th:if="${comment.user.role.id}==4">
                                 <div class="card bg-light text-light border-0" style="padding: 0px;">
-                                    <div class="card card-title bg-warning text-dark " style="padding: 0.5rem; margin-bottom: 0px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px;">
+                                    <div class="card card-title bg-warning text-dark " style="padding: 0.5rem; margin-bottom: 0px; border-radius: 0px;">
                                         <a style="color:white;" th:text="'Posted by '+ ${comment.user.username}+' on '+ ${comment.createdDate}" th:href="${post.url}"></a>
                                     </div>
-                                    <div class="card card-body bg-light text-dark" style="padding: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;">
+                                    <div class="card card-body bg-light text-dark" style="padding: 0px; border-radius: 0px;">
                                         <div class="container">
                                             <div class="row">
-                                                <div class="col col-12" style="margin: 0px; padding: 0px;">
-                                                    <div style="padding: 0.5rem; padding-left: 1rem; font-size:1.25rem;" th:text="${comment.text}">
+                                                <div class="col col-12 small" style="margin: 0px; padding: 0px; min-height: 4rem;">
+                                                    <div style="padding: 0.5rem; font-size:1rem; border-radius: 0px" th:text="${comment.text}">
                                                     </div>
                                                 </div>
                                             </div>
@@ -91,14 +91,14 @@
                             </th:block>
                             <th:block th:if="${comment.user.role.id}!=4">
                                 <div class="card bg-light text-light border-0" style="padding: 0px;">
-                                    <div class="card card-title bg-dark text-dark " style="padding: 0.5rem; margin-bottom: 0px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px;">
+                                    <div class="card card-title bg-dark text-dark " style="padding: 0.5rem; margin-bottom: 0px; border-radius: 0px;">
                                         <a style="color:white;" th:text="'Posted by '+ ${comment.user.username}+' on '+ ${comment.createdDate}" th:href="${post.url}"></a>
                                     </div>
                                     <div class="card card-body bg-light text-dark" style="padding: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;">
                                         <div class="container">
                                             <div class="row">
-                                                <div class="col col-12" style="margin: 0px; padding: 0px;">
-                                                    <div style="padding: 0.5rem; padding-left: 1rem; font-size:1.25rem;" th:text="${comment.text}">
+                                                <div class="col col-12" style="margin: 0px; padding: 0px; min-height: 4rem;">
+                                                    <div style="padding: 0.5rem; font-size:1rem; border-radius: 0px" th:text="${comment.text}">
                                                     </div>
                                                 </div>
                                             </div>
