--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <nav th:insert="Fragment.html::navbar"></nav>
-<main >
+<main style="margin-bottom: 4rem">
     <div class="container">
         <div class="row">
             <div class="col col-12">
