--- a/src/main/resources/templates/account/create.html
+++ b/src/main/resources/templates/account/create.html
@@ -98,7 +98,7 @@
         </div>
         <div class="col col-8">
             <div class="container col col-8">
-                <form id="createNewUser" class="mt-2">
+                <form id="createNewUser" class="mt-2" th:object="${newUser}" action="/create-account">
                     <div class="form-group">
                         <label for="username">User Name</label>
                         <input type="text" class="form-control" id="username" placeholder="Enter User Name..">
